refactor(role): 重构角色实体字段命名规范
- 将 roleCode 字段统一替换为 code 字段
- 将 roleName 字段统一替换为 name 字段
- 将 roleStatus 字段统一替换为 status 字段
- 更新 Repository 层方法参数和查询语句中的字段引用
- 修改 Service 层中对应的字段映射和访问逻辑
- 确保所有相关的方法调用和条件判断使用新的字段名